[package]
name = "human_resources"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "serde_json"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }